# cullama

./: .gitignore  CMakeLists.txt  Readme.md  main.py  pyproject.toml  run.py
include/: config.h  cuda_utils.h  engine.h  kv_cache.h  layers.h  memory_manager.h  model_loader.h  tokenizer.h
include/common/: hip_compat.h
kernels/attention/: flash_attention.cu  rope.cu
kernels/layers/: add.cu  rmsnorm.cu  silu_mul.cu
scripts/: export_tokenizer.py  export_weights.py
src/: engine.cpp  kv_cache.cpp  main.cpp  memory_manager.cpp  model_loader.cpp
tests/: test_kernels.cpp  test_system.cpp
