[project]
name = "cullama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.5",
    "torch>=2.10.0",
    "transformers>=5.2.0",
]

[tool.uv.sources]
numpy = { index = "pytorch-cpu" }
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
